logs/commonslibs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/commonslib'...
Compiling './lib/python3.5/site-packages/commonslib/database.py'...
***   File "./lib/python3.5/site-packages/commonslib/database.py", line 76
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commonslib/database_factory.py'...
***   File "./lib/python3.5/site-packages/commonslib/database_factory.py", line 353
    print db.get_dict_by_ids(u'select * from users where id=?', [1, 1, 1, 2, 2, 2, 3, 3, 3])
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commonslib/dateutil.py'...
***   File "./lib/python3.5/site-packages/commonslib/dateutil.py", line 130
    print datetime_to_string(datetime.datetime.now())
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commonslib/fileutil.py'...
***   File "./lib/python3.5/site-packages/commonslib/fileutil.py", line 67
    print get_write_file_name(343454, 'jpg')
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commonslib/megaboat.py'...
***   File "./lib/python3.5/site-packages/commonslib/megaboat.py", line 189
    raise ValueError, "MsgType '%s' not valid " % MsgType
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commonslib/stringutil.py'...
***   File "./lib/python3.5/site-packages/commonslib/stringutil.py", line 129
    print asc
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/commonslibs-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
